--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "firebase": "^5.2.0",
+    "firebase-tools": "^4.0.0",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "moment": "^2.22.2",
